--- a/themes/ayer/layout/_partial/post/busuanzi.ejs
+++ b/themes/ayer/layout/_partial/post/busuanzi.ejs
@@ -1,5 +1,5 @@
 <span>
-  <span><i class="ri-user-3-fill"></i><%- __('site_visitors') %>:<span id="busuanzi_value_site_uv"></span></s>
+  <span><i class="ri-user-3-fill"></i>本站访客数:<span id="busuanzi_value_site_uv"></span></s>
   <span class="division">|</span>
-  <span><i class="ri-eye-fill"></i><%- __('page_views') %>:<span id="busuanzi_value_page_pv"></span></span>
+  <span><i class="ri-eye-fill"></i>本页访问量:<span id="busuanzi_value_page_pv"></span></span>
 </span>
